--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,21 +1,30 @@
 .header-container {
   width: 100vw;
-  height: 100px;
-  background-color: aquamarine;
-  padding-top: 20px;
+  height: 120px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 header {
-  position: absolute;
   margin-right: 20px;
-  right: 0;
   width: 248px;
-  height: 150px;
+  height: 100px;
   padding-left: 10px;
   display: flex;
   background-image: url("../assets/button-line-01.png");
   background-repeat: no-repeat;
   background-size: contain;
+}
+
+.header-home {
+  position: absolute;
+  right: 0;
+}
+
+.logo-header {
+  width: 20vw;
+  max-width: 250px;
 }
 
 header button {
@@ -65,4 +74,34 @@ header button:hover {
   background-image: url("../assets/button-contact-01.png");
   background-repeat: no-repeat;
   background-size: contain;
+}
+
+@media screen and (max-width: 568px) {
+  .logo-header {
+    display: none;
+  }
+
+  header {
+    left: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  h1 {
+    display: none;
+  }
+
+  h2 {
+    text-align: center;
+  }
+
+  .header-container {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 568px) {
+  h2 {
+    display: none;
+  }
 }
