--- a/src/components/CardList/CardList.css
+++ b/src/components/CardList/CardList.css
@@ -11,9 +11,7 @@
   flex-direction: column;
   justify-items: center;
   align-items: space-between;
-  box-shadow: 10px 10px 10px hsl(0, 0%, 60%);
-  border: solid 1px hsl(5, 70%, 90%);
-  border-radius: 5px;
+  border-radius: 15px;
   margin: 0 3em 3em 0;
   /* backdrop-filter: blur(5px); */
   width: 260px;
@@ -46,4 +44,46 @@ video {
   height: auto;
   margin-top: 3rem;
   cursor: pointer;
+  background-color: black;
+}
+
+.Card.sad {
+  box-shadow: 10px 10px 10px hsl(197, 97%, 35%);
+  border: solid 3px hsl(197, 97%, 35%);
+}
+.Card.happy {
+  box-shadow: 10px 10px 10px hsl(34, 100%, 60%);
+  border: solid 3px hsl(34, 100%, 60%);
+}
+.Card.angry {
+  box-shadow: 10px 10px 10px hsl(300, 100%, 31%);
+  border: solid 3px hsl(300, 100%, 31%);
+}
+.Card.sporty {
+  box-shadow: 10px 10px 10px hsl(113, 67%, 51%);
+  border: solid 3px hsl(113, 67%, 51%);
+}
+.Card.epic {
+  box-shadow: 10px 10px 10px #c3922e;
+  border: solid 3px #c3922e;
+}
+.Card.chlid {
+  box-shadow: 10px 10px 10px hsl(293, 66%, 73%);
+  border: solid 3px hsl(293, 66%, 73%);
+}
+.Card.calm {
+  box-shadow: 10px 10px 10px hsl(123, 66%, 83%);
+  border: solid 3px hsl(123, 66%, 83%);
+}
+.Card.romance {
+  box-shadow: 10px 10px 10px hsl(323, 90%, 52%);
+  border: solid 3px hsl(323, 90%, 52%);
+}
+.Card.comedy {
+  box-shadow: 10px 10px 10px hsl(54, 100%, 50%);
+  border: solid 3px hsl(54, 92%, 50%);
+}
+.Card.hot {
+  box-shadow: 10px 10px 10px hsl(0, 100%, 44%);
+  border: solid 3px hsl(0, 100%, 44%);
 }
