--- a/src/components/CardList/CardList.css
+++ b/src/components/CardList/CardList.css
@@ -6,6 +6,14 @@
   margin: auto;
 }
 
+.card-party-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1000px;
+  margin: auto;
+}
+
 .Card {
   display: flex;
   flex-direction: column;
