--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@
 }
 
 body {
-
   background: rgb(149, 149, 149);
   background: linear-gradient(
     180deg,
@@ -18,7 +17,7 @@ body {
     rgba(255, 255, 255, 1) 30%
   );
   height: 98vh;
-
+  background-repeat: no-repeat;
   margin: 0;
   padding: 0;
   font-family: "Dosis";
@@ -38,5 +37,4 @@ h2 {
   h1 {
     font-size: 17pt;
   }
-
 }
