--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,11 @@
     display: block;
     position: absolute;
     height: 340px;
-    top: 495px;
+    top: 158px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
   }
 }
 
@@ -46,4 +50,16 @@
 .logo {
   display: flex;
   justify-content: center;
+}
+
+@media only screen and (max-width: 800px) {
+  .logo {
+    height: 144px;
+    position: relative;
+    top: 72px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+  }
 }
